--- a/v01/src/swe101.Tests/swe101.Tests.csproj
+++ b/v01/src/swe101.Tests/swe101.Tests.csproj
@@ -34,11 +34,11 @@
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="NBehave.Spec.Framework, Version=0.5.0.197, Culture=neutral, PublicKeyToken=d421feca0f4a05f6, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\NBehave\NBehave.Spec.Framework.dll</HintPath>
+      <HintPath>..\..\..\lib\NBehave\NBehave.Spec.Framework.dll</HintPath>
     </Reference>
     <Reference Include="NBehave.Spec.MSTest, Version=0.5.0.197, Culture=neutral, PublicKeyToken=d421feca0f4a05f6, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\NBehave\NBehave.Spec.MSTest.dll</HintPath>
+      <HintPath>..\..\..\lib\NBehave\NBehave.Spec.MSTest.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
